MPL/test/MplPasses/TypeChecker/cases/typecheck/positive/20.mpl
fun v20 :: -> A=
    -> v20
