MPL/test/MplPasses/TypeChecker/cases/typecheck/negative/8.mpl
fun n6  :: -> Double =
    -> 3 + 3 
    -> 3 + 3 
